--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "homepage": "https://github.com/fncreative/FlySorter-back-end#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "http-errors": "^1.7.1"
   },
   "devDependencies": {
     "bcrypt": "^3.0.2",
