--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "http-errors": "^1.7.1"
+    "http-errors": "^1.7.1",
+    "mongoose": "^5.3.10"
   },
   "devDependencies": {
     "bcrypt": "^3.0.2",
@@ -43,7 +44,6 @@
     "jest": "^23.6.0",
     "jsonwebtoken": "^8.3.0",
     "logger": "0.0.1",
-    "mongoose": "^5.3.10",
     "superagent": "^4.0.0-beta.5",
     "winston": "^3.1.0"
   }
