--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.3.10"
+    "mongoose": "^5.3.10",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
@@ -45,6 +46,5 @@
     "jest": "^23.6.0",
     "logger": "0.0.1",
     "superagent": "^4.0.0-beta.5",
-    "winston": "^3.1.0"
   }
 }
