--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "faker": "^4.1.0",
     "jest": "^23.6.0",
     "logger": "0.0.1",
-    "superagent": "^4.0.0-beta.5",
+    "superagent": "^4.0.0-beta.5"
   }
 }
