--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "artillery": "^1.6.0-25",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
